feat: 프로토타입 제작 완료

--- a/개발계획.md
+++ b/개발계획.md
@@ -650,155 +650,79 @@ interface SavedSettings {
 
 ---
 
-## 📅 Phase 6: 이미지 삽입 및 에러 처리
+## 📅 Phase 6: 이미지 삽입 및 에러 처리 (준비 중)
 
-**목표**: 실제 이미지 삽입 로직 및 에러 처리  
-**예상 기간**: 2~3일  
+**목표**: 실제 이미지를 스프레드시트에 삽입하고 완전한 에러 처리
+**예상 기간**: 2~3일
 **우선순위**: 🔴 높음
+**상태**: 🎯 준비 중
 
 ### 6.1 이미지 삽입 로직
 
-#### 세부 과제
+#### 구현할 함수
 
-- [ ] 배치 좌표 계산 재확인
-- [ ] 이미지 크기 픽셀 단위 변환
-- [ ] 셀 크기 정보 가져오기
-- [ ] 이미지 바이너리 변환
-- [ ] 스프레드시트 이미지 삽입 API
+- insertImages(images, startCell, settings, positions) - 이미지 배열을 지정된 위치에 삽입
+- insertImageAtCell(sheet, imageUrl, row, col, width, height) - 단일 이미지 삽입
+- removeInsertedImages() - Undo 기능
 
-#### 구현 요구사항
+#### 특징
 
-```javascript
-// 함수 목록
--insertImagesToSpreadsheet(images, layout, sizeSettings) -
-  calculatePixelSize(cellSize, imageSize) -
-  getCellDimensions(row, col) -
-  convertBlobToBase64(blob);
-```
-
-#### 예상 결과
-
-- 이미지 배치 계산 로직
-- 스프레드시트에 이미지 삽입
+- 여러 이미지 순차 삽입
+- Blob 변환 (Data URL → Blob)
+- 셀 기준 크기 계산 (셀 단위를 픽셀로 변환)
+- 에러 발생 시 개별 처리
 
 ---
 
-### 6.2 Progress 표시 및 완료 버튼 상태
+### 6.2 진행률 표시
 
-#### 세부 과제
+#### 구현할 함수
 
-- [ ] Progress 바 UI 생성
-- [ ] 진행률 계산 함수
-- [ ] Progress 색상 변경 (정상/에러)
-- [ ] 완료 버튼 상태 관리
-  - [ ] 비활성화 조건 확인
-  - [ ] 완료 → 저장 상태 전환
-- [ ] 취소 버튼 표시/숨김
+- updateProgress(current, total) - 진행률 업데이트
+- showProgress() / hideProgress() - UI 표시/숨김
+- showProgressError(message) - 에러 표시
 
-#### 구현 요구사항
+#### 특징
 
-```javascript
-// 상태 정의
-enum ButtonState {
-  DONE = 'DONE',      // 초기 상태
-  LOADING = 'LOADING',  // 진행 중
-  SAVE = 'SAVE',      // 저장 대기
-  ERROR = 'ERROR'     // 에러 상태
-}
-
-// 함수 목록
-- updateProgress(current, total)
-- setProgressColor(isError)
-- updateButtonState(newState)
-- handleCompleteClick()
-- handleSaveClick()
-- handleCancelClick()
-```
-
-#### Progress 바 HTML
-
-```html
-<div class="progress-container">
-  <div class="progress-bar" style="width: 0%"></div>
-  <span class="progress-text">0%</span>
-</div>
-```
-
-#### 예상 결과
-
-- Progress 바 표시
-- 버튼 상태 전환
-- 진행 상황 시각화
+- 실시간 진행률 바 (0% → 100%)
+- 진행 상황 텍스트
+- 완료/실패 상태 표시
 
 ---
 
-### 6.3 에러 처리 시스템
+### 6.3 에러 처리
 
-#### 세부 과제
+#### 에러 케이스
 
-- [ ] 이미지 로드 실패 감지
-- [ ] 에러 메시지 수집
-- [ ] Progress 하단에 에러 표시
-- [ ] 전체 프로세스 중단 처리
-- [ ] 취소 후 프리뷰 복구
-- [ ] 에러 복구 옵션
+1. **이미지 데이터 오류**
 
-#### 구현 요구사항
+   - 잘못된 이미지 형식
+   - 이미지 크기 초과
+   - 데이터 손상
 
-```javascript
-// 에러 상태 구조
-interface InsertionError {
-  imageIndex: number;
-  imageName: string;
-  errorMessage: string;
-  timestamp: number;
-}
+2. **셀 위치 오류**
 
-// 함수 목록
--handleImageInsertionError(error, imageIndex) -
-  displayErrorMessage(errorCount, totalImages) -
-  handleErrorRecovery() -
-  restorePreviewAfterError();
-```
+   - 범위 벗어남
+   - 잘못된 셀 참조
 
-#### 에러 메시지 포맷
+3. **권한 오류**
+   - 스프레드시트 수정 불가
 
-```
-"실패한 이미지 1/10: image_name.jpg"
-```
+#### 처리 전략
 
-#### 예상 결과
-
-- 이미지 로드 실패 감지
-- 에러 메시지 표시
-- 전체 프로세스 중단
+- 개별 이미지 오류 무시 (다른 이미지는 계속 삽입)
+- 사용자 친화적 메시지
+- 상세한 콘솔 로깅
 
 ---
 
-### 6.4 취소 및 Undo 처리
+### 6.4 Undo/Cancel 기능
 
-#### 세부 과제
+#### 구현
 
-- [ ] 취소 버튼 클릭 처리
-- [ ] Google Sheets Undo 함수 호출
-- [ ] 프리뷰 복구
-- [ ] 설정값 유지
-- [ ] 상태 복원
-
-#### 구현 요구사항
-
-```javascript
-// 함수 목록
--handleCancelClick() -
-  undoImageInsertion() -
-  restoreUIState() -
-  SpreadsheetApp.undo(); // Google Apps Script API
-```
-
-#### 예상 결과
-
-- 취소 버튼으로 이미지 삽입 취소
-- Undo 기능 활용
+- 마지막 삽입한 이미지 추적
+- Cancel 버튼 클릭 시 제거
+- 또는 Spreadsheet.undo() 활용
 
 ---
 
