--- a/테스트계획.md
+++ b/테스트계획.md
@@ -1642,6 +1642,465 @@ images/
 
 ---
 
+### 9️⃣ 이미지 삽입 테스트 (TC-51 ~ TC-58) ✅ Phase 6 신규
+
+#### TC-51: 기본 이미지 삽입
+
+```
+조건:
+- 이미지 1개 선택
+- 시작 셀: A1
+- 패턴: 1x1
+- 크기: 2x2 셀
+
+동작:
+1. 모든 설정 완료
+2. "완료" 버튼 클릭
+3. 진행률 표시 확인
+4. 완료 메시지 확인
+
+예상 결과:
+- 진행률 바가 0% → 100%로 이동
+- 이미지가 A1 위치에 2x2 셀 크기로 삽입됨
+- "✅ 이미지 삽입 완료! 삽입됨: 1개" 메시지 표시
+- 스프레드시트에서 이미지 확인 가능
+
+검증:
+1. 진행률 바 동작 확인
+2. 스프레드시트 이미지 삽입 확인
+3. 이미지 크기 (약 176x42px) 확인
+4. 콘솔 로그 확인
+```
+
+#### TC-52: 여러 이미지 삽입 (2x2 패턴)
+
+```
+조건:
+- 이미지 4개 선택
+- 시작 셀: B2
+- 패턴: 2x2
+- 간격: 0
+- 크기: 2x2 셀
+
+동작:
+1. 모든 설정 완료
+2. "완료" 버튼 클릭
+3. 진행률 변화 관찰
+4. 완료 메시지 확인
+
+예상 결과:
+- 4개 이미지가 계산된 위치에 순차 삽입
+  - B2, C2, B3, C3 위치에 삽입
+- "✅ 이미지 삽입 완료! 삽입됨: 4개" 메시지
+- 모든 이미지 동일한 크기로 삽입됨
+
+검증:
+1. 각 이미지 위치 정확도 확인
+2. 총 4개 이미지 확인
+3. 간격 없이 인접하게 배치되었는지 확인
+```
+
+#### TC-53: 간격 포함 이미지 삽입
+
+```
+조건:
+- 이미지 4개
+- 패턴: 2x2
+- 행 간격: 1, 열 간격: 1
+- 크기: 2x2 셀
+
+동작:
+1. 모든 설정 완료
+2. "완료" 버튼 클릭
+
+예상 결과:
+- 이미지가 간격을 고려한 위치에 삽입
+- 계산된 배치: A1, C1, A4, C4 (간격 포함)
+- 4개 이미지 모두 정상 삽입
+
+검증:
+1. 간격을 고려한 배치 정확도 확인
+2. 예상 위치에 이미지 삽입되었는지 확인
+```
+
+#### TC-54: 비활성 셀 포함 이미지 삽입
+
+```
+조건:
+- 이미지 3개 (패턴 2x2 중 1개 비활성)
+- 패턴: 2x2
+- 비활성 셀: (1, 2)
+- 크기: 2x2 셀
+
+동작:
+1. 비활성 셀 설정 (1, 2)
+2. "완료" 버튼 클릭
+
+예상 결과:
+- 3개 이미지만 삽입됨
+- 비활성 셀 위치 제외
+- "✅ 이미지 삽입 완료! 삽입됨: 3개" 메시지
+
+검증:
+1. 3개 이미지만 삽입되었는지 확인
+2. 비활성 셀 위치에 이미지 없음 확인
+```
+
+#### TC-55: 다양한 크기의 이미지 삽입
+
+```
+조건:
+- 이미지 2개 (크기 다름)
+- 크기 설정: 가로 2셀, 세로 3셀
+- 비율 유지: OFF
+- 패턴: 1x2
+
+동작:
+1. 크기 설정
+2. "완료" 버튼 클릭
+
+예상 결과:
+- 모든 이미지가 동일한 2x3 셀 크기로 삽입됨
+- 176px (가로) x 63px (세로) 크기로 통일
+- 2개 이미지 모두 정상 삽입
+
+검증:
+1. 모든 이미지 동일한 크기 확인
+2. 설정된 크기와 일치하는지 확인
+```
+
+#### TC-56: 작업 취소 기능
+
+```
+조건:
+- 이미지 삽입 준비 완료
+
+동작:
+1. "완료" 버튼 클릭
+2. 진행 중 "취소" 버튼 클릭
+3. 확인 대화상자에서 "확인" 클릭
+
+예상 결과:
+- 이미지 삽입이 중단됨
+- "작업이 취소되었습니다" 메시지
+- SpreadsheetApp.undo() 호출되어 이미지 제거 (또는 유지)
+- 버튼 상태 초기화
+
+검증:
+1. 취소 버튼 동작 확인
+2. Undo 실행 확인
+3. UI 상태 초기화 확인
+```
+
+#### TC-57: 에러 처리 - 범위 벗어남
+
+```
+조건:
+- 이미지 3개
+- 패턴: 2x2 (4개 필요하지만 범위 제한)
+- 선택 셀: ZZ1000 근처 (범위 초과 가능성)
+
+동작:
+1. 배치 설정
+2. "완료" 버튼 클릭
+
+예상 결과:
+- 에러 발생 시:
+  - "❌ 셀 범위를 벗어났습니다" 메시지
+  - 진행률 멈춤
+  - 사용자 알림 표시
+- 또는 성공적으로 삽입
+
+검증:
+1. 에러 메시지 정확성 확인
+2. 사용자 알림 표시 확인
+3. 콘솔 로그에 에러 내용 기록 확인
+```
+
+#### TC-58: 에러 처리 - 이미지 데이터 손상
+
+```
+조건:
+- 손상된 이미지 데이터 포함
+- 정상 이미지 3개, 손상 이미지 1개
+
+동작:
+1. 4개 이미지 선택 (1개 손상)
+2. "완료" 버튼 클릭
+
+예상 결과:
+- 정상 이미지 3개는 삽입됨
+- 손상 이미지는 건너뜀
+- "✅ 이미지 삽입 완료! 삽입됨: 3개, 실패: 1개" 메시지
+- 콘솔에 개별 에러 로그
+
+검증:
+1. 정상 이미지 3개 확인
+2. 실패 개수 정확도 확인
+3. 콘솔 로그에 각 이미지별 결과 기록 확인
+```
+
+---
+
+### Phase 6 테스트 요약
+
+| TC    | 항목             | 상태 | 우선순위 |
+| ----- | ---------------- | ---- | -------- |
+| TC-51 | 기본 이미지 삽입 | ⏳   | 🔴 높음  |
+| TC-52 | 여러 이미지 삽입 | ⏳   | 🔴 높음  |
+| TC-53 | 간격 포함 삽입   | ⏳   | 🟡 중간  |
+| TC-54 | 비활성 셀 포함   | ⏳   | 🟡 중간  |
+| TC-55 | 다양한 크기      | ⏳   | 🟡 중간  |
+| TC-56 | 작업 취소        | ⏳   | 🟡 중간  |
+| TC-57 | 에러처리 범위    | ⏳   | 🟢 낮음  |
+| TC-58 | 에러처리 손상    | ⏳   | 🟢 낮음  |
+
+---
+
+## Phase 7 테스트 케이스 (TC-59 ~ TC-70) ✅
+
+### 이미지 선택 UI 개선
+
+#### TC-59: 이미지 썸네일 표시
+
+```
+조건:
+- 이미지 3개 선택
+
+동작:
+1. 각 이미지의 썸네일 확인
+
+예상 결과:
+- 50x50px 썸네일 표시
+- 파일명 표시
+- 이미지 크기 (WxH px) 표시
+- 파일 크기 (KB) 표시
+- 삭제 버튼 동작
+```
+
+#### TC-60: 드래그앤드롭 - 순서 변경
+
+```
+조건:
+- 이미지 3개 이상
+
+동작:
+1. 첫 번째 이미지를 드래그
+2. 세 번째 위치에 드롭
+
+예상 결과:
+- 이미지 순서 변경됨
+- 불투명도 0.5로 드래그 중 표시
+- 파란색 선으로 드롭 위치 표시
+- localStorage에 자동 저장
+```
+
+#### TC-61: 드래그앤드롭 - 파일 추가
+
+```
+조건:
+- 이미지 리스트 있음
+
+동작:
+1. 새 이미지 파일을 이미지 리스트에 드래그
+2. 드롭
+
+예상 결과:
+- 파일 추가 성공
+- 초록색 하이라이트 표시
+- 기존 파일과 동일하게 처리
+```
+
+### 설정값 프리셋
+
+#### TC-62: 프리셋 저장
+
+```
+조건:
+- 설정값 변경 완료
+
+동작:
+1. 💾 저장 버튼 클릭
+2. 프리셋 이름 입력 (예: "2x3 배치")
+3. 설명 입력 (선택)
+
+예상 결과:
+- "✅ 프리셋이 저장되었습니다" 메시지
+- localStorage에 저장됨
+- 드롭다운 목록에 추가됨
+```
+
+#### TC-63: 프리셋 로드
+
+```
+조건:
+- 저장된 프리셋 있음
+
+동작:
+1. 드롭다운에서 프리셋 선택
+
+예상 결과:
+- 모든 설정값 자동 복구
+- UI 업데이트
+- 성공 메시지 표시
+```
+
+#### TC-64: 프리셋 삭제
+
+```
+조건:
+- 저장된 프리셋 있음
+
+동작:
+1. 드롭다운에서 프리셋 선택
+2. 🗑️ 삭제 버튼 클릭
+3. 삭제 확인
+
+예상 결과:
+- 프리셋 삭제됨
+- 드롭다운 목록 업데이트
+- 삭제 확인 메시지
+```
+
+#### TC-65: 프리셋 덮어쓰기
+
+```
+조건:
+- 같은 이름의 프리셋 존재
+
+동작:
+1. 다른 설정값으로 변경
+2. 같은 이름으로 저장 시도
+
+예상 결과:
+- "덮어쓰시겠습니까?" 확인
+- 확인 시 업데이트
+- 취소 시 저장 안 됨
+```
+
+### 반응형 디자인
+
+#### TC-66: 모바일 화면 (< 600px)
+
+```
+조건:
+- 모바일 기기 또는 브라우저 너비 400px
+
+동작:
+1. UI 레이아웃 확인
+
+예상 결과:
+- 전체 너비 사용 (100vw)
+- 버튼 세로 배치
+- 폰트 크기 축소 (12-13px)
+- 이미지 리스트 높이 150px
+- 스크롤 가능
+```
+
+#### TC-67: 태블릿 화면 (600px ~ 1023px)
+
+```
+조건:
+- 태블릿 기기 또는 브라우저 너비 768px
+
+동작:
+1. UI 레이아웃 확인
+
+예상 결과:
+- 적절한 패딩 (md/lg)
+- 버튼 가로 배치
+- 폰트 크기 13px
+- 이미지 리스트 높이 180px
+- 모든 요소 표시 가능
+```
+
+#### TC-68: 데스크톱 화면 (>= 1024px)
+
+```
+조건:
+- 데스크톱 또는 브라우저 너비 1200px
+
+동작:
+1. UI 레이아웃 확인
+
+예상 결과:
+- 최적 패딩 (lg)
+- 모든 요소 완전 표시
+- 폰트 크기 14-18px
+- 이미지 리스트 높이 200px
+- 최적 사용성
+```
+
+### 어두운 테마
+
+#### TC-69: 어두운 테마 토글
+
+```
+조건:
+- 앱 실행 (밝은 모드)
+
+동작:
+1. 헤더의 🌙 버튼 클릭
+2. 다시 클릭
+
+예상 결과:
+- 테마 전환 (Light ↔ Dark)
+- 모든 색상 업데이트
+- 버튼 아이콘 변경 (🌙 → ☀️)
+- localStorage에 저장
+```
+
+#### TC-70: 시스템 설정 감지
+
+```
+조건:
+- OS 어두운 모드 활성화
+- 앱 첫 방문
+
+동작:
+1. 앱 시작
+
+예상 결과:
+- 자동으로 어두운 테마 적용
+- 시스템 설정과 일치
+- 저장된 설정이 없을 때만
+```
+
+#### TC-71: 테마 저장 및 복구
+
+```
+조건:
+- 어두운 테마로 설정 후 페이지 새로고침
+
+동작:
+1. 테마 선택 후 새로고침
+
+예상 결과:
+- 선택한 테마 유지
+- localStorage에서 복구됨
+- 시스템 설정보다 우선
+```
+
+### Phase 7 테스트 요약
+
+| TC    | 항목             | 카테고리 | 우선순위 |
+| ----- | ---------------- | -------- | -------- |
+| TC-59 | 이미지 썸네일    | UI 개선  | 🔴 높음  |
+| TC-60 | 드래그 순서 변경 | UI 개선  | 🔴 높음  |
+| TC-61 | 드래그 파일 추가 | UI 개선  | 🔴 높음  |
+| TC-62 | 프리셋 저장      | 프리셋   | 🟡 중간  |
+| TC-63 | 프리셋 로드      | 프리셋   | 🟡 중간  |
+| TC-64 | 프리셋 삭제      | 프리셋   | 🟡 중간  |
+| TC-65 | 프리셋 덮어쓰기  | 프리셋   | 🟢 낮음  |
+| TC-66 | 모바일 반응형    | 반응형   | 🟡 중간  |
+| TC-67 | 태블릿 반응형    | 반응형   | 🟡 중간  |
+| TC-68 | 데스크톱 반응형  | 반응형   | 🟢 낮음  |
+| TC-69 | 테마 토글        | 테마     | 🟡 중간  |
+| TC-70 | 시스템 감지      | 테마     | 🟢 낮음  |
+| TC-71 | 테마 저장/복구   | 테마     | 🟡 중간  |
+
+---
+
 ## 📊 테스트 실행 계획
 
 ### Phase별 테스트 일정
