--- a/프로젝트 명세.md
+++ b/프로젝트 명세.md
@@ -14,7 +14,7 @@
   - '간격': 셀 개수
 - 사용자는 패턴에서 이미지가 안들어가는 부분(건너뛰기 할 부분)을 지정할 수 있다
 - 사용자는 이미지의 크기를 지정된 크기 또는 선택된 셀에 맞춰 크기를 변경할 수 있다
-  - 이미지의 크기 단위: 셀 높이/너비
+  - 이미지의 크기 단위: 픽셀 (px)
 - 사용자가 설정 값들을 변경할 경우 사용자는 실시간으로 반영된 패턴을 확인할 수 있다
 - 사용자는 설정한 모든 설정 값들은 브라우저의 localstorage에 저장후 재사용할 수 있다
 
